gnome-online-accounts (3.2.1-1) UNRELEASED; urgency=low

  [ Jeremy Bicha ]
  * Initial release. Closes: #646255

  [ Michael Biebl ]
  * Suggest devhelp instead of depending on lynx | www-browser.
  * Tigthen the dependency on gir1.2-goa-1.0.

 -- Michael Biebl <biebl@debian.org>  Sat, 22 Oct 2011 17:37:59 +0200